# AI_Trader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai_trader/: __init__.py
ai_trader/backtest/: __init__.py  engine.py  policies.py
ai_trader/dashboard/: __init__.py  app.py
ai_trader/data/: __init__.py  sources.py  splitter.py
ai_trader/features/: __init__.py  engineer.py  normalizer.py  regime.py
ai_trader/live/: __init__.py  broker.py  runtime.py
ai_trader/meta/: __init__.py  controller.py  drift.py
ai_trader/models/: __init__.py  dataset.py  trainer.py  transformer.py
ai_trader/risk/: __init__.py  manager.py
ai_trader/rl/: __init__.py  agent.py  env.py
ai_trader/training/: __init__.py  pipeline.py  walk_forward.py
ai_trader/utils/: __init__.py  config.py  logging_setup.py  metrics.py  seeding.py
configs/: default.yaml  live.yaml
docs/: ARCHITECTURE.md  SAFETY.md
scripts/: generate_synthetic.py  run_backtest.py  run_live.py  train_rl.py  train_supervised.py  walk_forward.py
tests/: conftest.py  test_features.py  test_metrics.py  test_risk.py
