[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_trader"
version = "0.1.0"
description = "Modular production-grade algorithmic trading research framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.3,<2.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "hmmlearn>=0.3",
    "lightgbm>=4.0",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pyarrow>=14.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
all = [
    "ai_trader[ml,dashboard,dev]",
]

[project.scripts]
ai-trader-backtest   = "ai_trader.scripts.run_backtest:main"
ai-trader-train-rl   = "ai_trader.scripts.train_rl:main"
ai-trader-train-sup  = "ai_trader.scripts.train_supervised:main"
ai-trader-synthetic  = "ai_trader.scripts.generate_synthetic:main"
ai-trader-walk       = "ai_trader.scripts.walk_forward:main"
ai-trader-live       = "ai_trader.scripts.run_live:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
